<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0</version>
        <relativePath/>
    </parent>

    <groupId>com.bp</groupId>
    <artifactId>reservation-arch-compare</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>services/common</module>
        <module>services/gateway-service</module>
        <module>services/user-service</module>
        <module>services/reservation-service</module>
        <module>services/payment-service</module>
        <module>services/notification-service</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <spring.cloud.version>2024.0.0</spring.cloud.version>
        <springdoc.version>2.6.0</springdoc.version>
        <flyway.version>10.10.0</flyway.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Flyway -->
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>

            <!-- Springdoc OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>